# qvpnapplet

./: CMakeLists.txt  README.md  config.h.cmake  make-iface.sh  net.pocentek.vpn.conf  net.pocentek.vpn.xml
applet/: CMakeLists.txt  VpnAction.cpp  VpnAction.h  VpnIf.cpp  VpnIf.h  Window.cpp  Window.h  main.cpp  vpnapplet.qrc
conf/: net.pocentek.vpn.service.in  qvpnapplet.desktop.in
daemon/: CMakeLists.txt  VpnDaemon.cpp  VpnDaemon.h  VpnIfAdaptor.cpp  VpnIfAdaptor.h  VpnProcess.cpp  VpnProcess.h  main.cpp
debian/: changelog  control  dirs  files  install  qvpnapplet.service  qvpnapplet.substvars
debian/qvpnapplet/DEBIAN/: conffiles  control  md5sums
debian/qvpnapplet/etc/xdg/autostart/: qvpnapplet.desktop
debian/qvpnapplet/usr/sbin/: qvpnd
debian/qvpnapplet/usr/share/dbus-1/system-services/: net.pocentek.vpn.service
